# TradeScout

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_CONTEXT.md  CLAUDE_STOP_CONTEXT.txt  CLAUDE_TODO.md  README.md  __init__.py  demo_api_cache.py  demo_nvidia_asset.py  momentum_trading_app_plan.md  pyproject.toml  requirements.txt  tox.ini  tradescout
.claude/: goodbye.md  hello.md
analysis/: __init__.py  interfaces.py
config/: local_config.py
data/examples/: aapl_quote.json  active_1000_20250722.json  after_hours_scan_20250722_2158.json  after_hours_scanner_test.py  custom_analysis_example.json  demo_nvidia_asset.py  demo_simple_exploration.py  exploration_utils.py  gainers_1000_20250722.json  gap_candidates_analysis_20250722.json  googl_quote.json  losers_1000_20250722.json  msft_quote.json  nvda_polygon_quote.json  nvda_yfinance_quote.json  nvidia_data_2025-07-20.json  test_cnn_direct.py  test_cnn_manual.py  test_cnn_scraper.py
data_models/: __init__.py  api_cache.py  domain_models_analysis.py  domain_models_core.py  factories.py  interfaces.py
data_sources/: yfinance_scanner.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GAP_TRADING_RESEARCH.md  GAP_TRADING_STRATEGY.md  LESSONS_LEARNED.md  MARKET_WIDE_DATA_PROVIDER.md  Price Gap Anomaly in the US Stock Market_ The Whole Story.txt  Price Gap Anomaly in the US Stock Market_ The Whole Story.txt:Zone.Identifier  TODO.md  TRADE_SCOUT_PLAN.md
src/tradescout/: __init__.py
src/tradescout/analysis/: __init__.py  interfaces.py
src/tradescout/caches/: api_cache.py
src/tradescout/config/: .env.template  data_sources_config.yaml  data_sources_manager.py  local_config.py  provider_config.py
src/tradescout/data_models/: __init__.py  domain_models_analysis.py  domain_models_core.py  factories.py  interfaces.py
src/tradescout/data_sources/: asset_data_provider_alpha_vantage.py  asset_data_provider_finnhub.py  asset_data_provider_polygon.py  asset_data_provider_yfinance.py  multi_provider_coordinator.py  smart_coordinator.py  yfinance_scanner.py
src/tradescout/market_wide/: __init__.py  interfaces.py  market_movers.py
src/tradescout/market_wide/providers/: __init__.py  alpha_vantage_market.py
src/tradescout/scripts/: cli.py
src/tradescout/storage/: interfaces.py  sqlite_repository.py
src/tradescout/web_scraping/: __init__.py  cnn_after_hours_scraper.py  interfaces.py
storage/: interfaces.py
tests/: __init__.py  conftest.py  test_cli.py  test_data_models.py  test_market_wide.py  test_sqlite_repository.py  test_yfinance_adapter.py
